...
                constraints: BoxConstraints.tight(Size(12.pw(context), 12.pw(context))), // Scaled touch area
                onPressed: () {
                  notifier.logMood(MoodEntry(date: date, moodRating: i), context);
                  if (context.mounted) {
                    ScaffoldMessenger.of(context).showSnackBar(
                      SnackBar(
                        content: Text('Mood logged!', style: TextStyle(fontSize: 14.ww(context))),
                        backgroundColor: Colors.grey,
                      ),
                    );
                    (context.findAncestorStateOfType<MoodTrackerScreenState>())?.showRewardAnimation();
                  }
                  Navigator.pop(context);
...
